--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>彰化市和美國小</title>
 
-  <link rel="preload" as="image" href="/src/assets/images/ChinesePaintingRing.png" />
-  <link rel="preload" as="image" href="/src/assets/images/Backgound.png" />
-  <link rel="preload" as="image" href="/src/assets/images/Backgound_N.png" />
+  <link rel="preload" as="image" href="/src/assets/images/ChinesePaintingRing.webp" />
+  <link rel="preload" as="image" href="/src/assets/images/Backgound.webp" />
+  <link rel="preload" as="image" href="/src/assets/images/Backgound_N.webp" />
 </head>
 
 <body>
