--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
   <link rel="preload" as="image" href="/src/assets/images/ChinesePaintingRing.webp" />
   <link rel="preload" as="image" href="/src/assets/images/Backgound.webp" />
   <!-- <link rel="preload" as="font" type="font/woff2" href="/src/assets/fonts/I.PenCrane-B-Regular.woff2" crossorigin> -->
-  <link rel="preload" as="font" type="font/ttf" href="/src/assets/fonts/I.PenCrane-B-Regular.ttf" crossorigin>
-  <link rel="preload" as="image" href="/src/assets/images/Backgound_N.webp" />
+  <!-- <link rel="preload" as="font" type="font/ttf" href="/src/assets/fonts/I.PenCrane-B-Regular.ttf" crossorigin> -->
 </head>
 
 <body>
