--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
   <link rel="preload" as="image" href="/src/assets/images/Backgound.webp" />
   <!-- <link rel="preload" as="font" type="font/woff2" href="/src/assets/fonts/I.PenCrane-B-Regular.woff2" crossorigin> -->
   <!-- <link rel="preload" as="font" type="font/ttf" href="/src/assets/fonts/I.PenCrane-B-Regular.ttf" crossorigin> -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Potta+One&display=swap" rel="stylesheet">
 </head>
 
 <body>
