--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <!-- <link rel="preload" as="font" type="font/ttf" href="/src/assets/fonts/I.PenCrane-B-Regular.ttf" crossorigin> -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Potta+One&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Potta+One&family=Zen+Kurenaido&display=swap" rel="stylesheet">
 </head>
 
 <body>
