--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/Logo.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>彰化市和美國小</title>
+  <title>彰化縣和美國小</title>
 
   <link rel="preload" as="image" href="/src/assets/images/ver02/ChinesePaintingRing_v2_Hemei.webp" />
   <link rel="preload" as="image" href="/src/assets/images/var02/Backgound_v2_Hemei.webp" />
